kubernetes/merlin-app.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: merlin-app
  labels:
    app: merlin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: merlin-app-deployment
  template:
    metadata:
      labels:
        app: merlin
    spec:
      containers:
      - name: merlin
        image: nogelrmtaylor/merlin-app:main
        ports:
        - containerPort: 3000

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: merlin-app-service
# spec:
#   selector:
#     app.kubernetes.io/name: Merlin
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 3000

# ---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: minimal-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx-example
#   rules:
#   - http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: merlin-app-service
#             port:
#               number: 80
