kubernetes/merlin-app-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: merlin-app-service
spec:
  type:
    LoadBalancer
  selector:
    app.kubernetes.io/name: Merlin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
